--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
             <a href="#solution">How It Works</a>
             <a href="#founder">About</a>
             <a href="#pricing">Pricing</a>
-            <a href="#cta" class="btn btn-primary">Book Discovery Call</a>
+            <a href="https://discconsult.ai/book-meeting/" target="_blank" class="btn btn-primary">Book Discovery Call</a>
         </div>
         <button class="mobile-menu-btn" onclick="toggleMobileMenu()">
             <span></span>
@@ -1039,7 +1039,7 @@
         <a href="#solution" onclick="toggleMobileMenu()">How It Works</a>
         <a href="#founder" onclick="toggleMobileMenu()">About</a>
         <a href="#pricing" onclick="toggleMobileMenu()">Pricing</a>
-        <a href="#cta" class="btn btn-primary" onclick="toggleMobileMenu()">Book Discovery Call</a>
+        <a href="https://discconsult.ai/book-meeting/" target="_blank" class="btn btn-primary" onclick="toggleMobileMenu()">Book Discovery Call</a>
     </div>
 
     <!-- Hero Section -->
@@ -1051,7 +1051,7 @@
             <h1>Find <span>Millions</span> in Hidden Operational Waste</h1>
             <p>We help lean upstream oil & gas companies with $50M-$1B revenue who don't have an in-house data analytics team identify operational leakage in hours, not months.</p>
             <div class="hero-cta">
-                <a href="#cta" class="btn btn-primary btn-large">Book a Discovery Call →</a>
+                <a href="https://discconsult.ai/book-meeting/" target="_blank" class="btn btn-primary btn-large">Book a Discovery Call →</a>
                 <a href="#solution" class="btn btn-secondary btn-large">See How It Works</a>
             </div>
             <div class="hero-stats">
@@ -1294,7 +1294,7 @@
                         <span>Live executive briefing included</span>
                     </div>
                 </div>
-                <a href="#cta" class="btn btn-primary btn-large" style="width: 100%; justify-content: center;">Get Started →</a>
+                <a href="https://discconsult.ai/book-meeting/" target="_blank" class="btn btn-primary btn-large" style="width: 100%; justify-content: center;">Book Discovery Call →</a>
             </div>
         </div>
     </section>
@@ -1303,7 +1303,7 @@
     <section class="cta" id="cta">
         <h2>Ready to Find Your Hidden Millions?</h2>
         <p>Book a 30-minute discovery call. No pressure, no commitment — just an honest conversation about your operations.</p>
-        <a href="mailto:noel@oilaudit.ai?subject=Discovery%20Call%20Request" class="btn btn-primary btn-large">Book Discovery Call →</a>
+        <a href="https://discconsult.ai/book-meeting/" target="_blank" class="btn btn-primary btn-large">Book Discovery Call →</a>
         <p style="margin-top: 24px; font-size: 14px; color: rgba(255,255,255,0.5);">
             📧 noel@oilaudit.ai &nbsp;&nbsp;|&nbsp;&nbsp; 📍 Dallas, Texas
         </p>
