--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                 ⚡ AI-Powered Operational Audits
             </div>
             <h1>Find <span>Millions</span> in Hidden Operational Waste</h1>
-            <p>We help lean upstream oil & gas companies with $50M-$1B revenue who don't have an in-house data analytics team identify operational leakage in hours, not months.</p>
+            <p>We help lean upstream oil & gas operators producing 2,000-30,000 BOE/day — without an in-house analytics team — find hidden operational waste in weeks, not months.</p>
             <div class="hero-cta">
                 <a href="https://discconsult.ai/book-meeting/" target="_blank" rel="noopener" class="btn btn-primary btn-large">Book a Discovery Call →</a>
                 <a href="#solution" class="btn btn-secondary btn-large">See How It Works</a>
@@ -1334,7 +1334,7 @@
         <p>Book a 30-minute discovery call. No pressure, no commitment — just an honest conversation about your operations.</p>
         <a href="https://discconsult.ai/book-meeting/" target="_blank" rel="noopener" class="btn btn-primary btn-large">Book Discovery Call →</a>
         <p style="margin-top: 24px; font-size: 14px; color: rgba(255,255,255,0.5);">
-            📧 noel@oilaudit.ai &nbsp;&nbsp;|&nbsp;&nbsp; 📍 Dallas, Texas
+            📧 <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="751b1a1019351a1c191400111c015b141c">[email&#160;protected]</a> &nbsp;&nbsp;|&nbsp;&nbsp; 📍 Dallas, Texas
         </p>
     </section>
 
@@ -1347,17 +1347,10 @@
                 <a href="#solution">How It Works</a>
                 <a href="#founder">About</a>
                 <a href="#pricing">Pricing</a>
-                <a href="mailto:noel@oilaudit.ai">Contact</a>
+                <a href="/cdn-cgi/l/email-protection#4a24252f260a2523262b3f2e233e642b23">Contact</a>
             </div>
             <div class="footer-copy">© 2026 Disc Consult. All rights reserved.</div>
         </div>
     </footer>
-    <script>
-        function toggleMobileMenu() {
-            const menu = document.getElementById('mobileMenu');
-            menu.classList.toggle('active');
-            document.body.style.overflow = menu.classList.contains('active') ? 'hidden' : '';
-        }
-    </script>
-</body>
-</html>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+        functio
